tests/invalid/invalid_iterable.fg
fn main():
    for n in 42:
        print(n.to_string())
